2004-03-31  Jeffrey Stedfast  <fejj@ximian.com>

	* e-signature.[c,h]: New class similar to EAccount but for
	signatures.

	* e-signature-list.[c,h]: New class similar to EAccountList only
	for signatures.

2004-03-31  Not Zed  <NotZed@Ximian.com>

	* e-account-list.h: similar to below.

	* e-account.h: define struct _EAccount* so you can properly forward
	declare it.

2004-03-18  Not Zed  <NotZed@Ximian.com>

	* e-account.c: Added options for transport_url and source_url
	permissions.

2004-03-18  Not Zed  <NotZed@Ximian.com>

	* e-account.c (e_account_writable, e_account_writable_option):
	added interface to find out if various fields or server options
	are writable.  to work around gconf limitations.

2004-03-04  William Jon McCann  <mccann@jhu.edu>

	* e-dialog-utils.c (e_notice, e_notice_with_xid, save_ok): 
	* e-request.c (e_request_string): 
	* e-passwords.c (e_passwords_ask_password):
	Remove separator from dialogs per HIG.

2004-03-04  Not Zed  <NotZed@Ximian.com>

	* e-sexp.c: Added some debug stuff.

2004-02-27  Not Zed  <NotZed@Ximian.com>

	** See Bug #37329.

	* e-mktemp.c (get_dir): setup a comjpile time option for storing
	in the homedir, and also just use the uid as the key for a /tmp
	dir option.
	(e_mktemp_cleanup): removed entirely.
	(e_mkstemp, e_mkdtemp, e_mktemp): dont save the file/dirname in a
	list anymore.
	(expire_dir_rec): expire old temp data from previous runs/old data
	lying around.  Based on access time.
	(get_dir): run an expirey every now and then.

2004-02-25  Jeffrey Stedfast  <fejj@ximian.com>

	* e-gui-utils.c (e_icon_for_mime_type): Protect against feeding
	gdk_pixbuf_new_from_file() a NULL path. Clears up some console
	warning spewage.

2004-02-19  Not Zed  <NotZed@Ximian.com>

	* e-pilot-util.c: include string.h, fixes 64 bit crash.  From
	David Mosberger.

2004-02-03  Chris Toshok  <toshok@ximian.com>

	* e-html-utils.c (e_text_to_html_full): add callto:, h323:, and
	webcal: schemes.
